--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "express-session": "^1.17.1",
+    "path": "^0.12.7",
+    "puppeteer": "^3.2.0"
   }
 }
